syntax = "proto3";

package characterPackage;

service CharacterService {
    rpc listCharacters(Characters) returns (Characters) {}
}

message CharacterStats {
    int32 vitality = 1;
    int32 strength = 2;
    int32 defense = 3;
    int32 morale = 4;
    int32 agility = 5;
}

message Character {
    string _id = 1;
    string owner = 2;
    int32 tokenId = 3;
    string type = 4;
    string rarity = 5;
    string class = 6;
    CharacterStats stats = 7;
}

message Characters {
    repeated Character characters = 1;
}